--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1"
-  }
+  },
+  "compilerOptions": {
+    "baseUrl": "./src/**/*",
+    "module": "NodeNext",
+    "jsx": "react-jsx"
+  },
+  "include": ["./src"],
+  "exclude": ["./node_modules", "./public"]
 }
