--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -24,12 +25,5 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5",
     "vite-plugin-eslint": "^1.8.1"
-  },
-  "compilerOptions": {
-    "baseUrl": "./src/**/*",
-    "module": "NodeNext",
-    "jsx": "react-jsx"
-  },
-  "include": ["./src"],
-  "exclude": ["./node_modules", "./public"]
+  }
 }
